students/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: students
  labels:
    app.kubernetes.io/name: students
    app.kubernetes.io/version: version
    environment: local
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: students
  template:
    metadata:
      labels:
        app.kubernetes.io/name: students
        app.kubernetes.io/version: version
        environment: minikube
    spec:
      containers:
        - name: students
          image: localhost:5000/demo-students
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 60
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health
              port: 8080
            periodSeconds: 5
          volumeMounts:
            - mountPath: /app/config
              name: application-config
      volumes:
        - name: application-config
          configMap:
            name: students-demo
            items:
              - key: application.properties
                path: application.properties
