students/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: students
  labels:
    app.kubernetes.io/name: students
    app.kubernetes.io/version: "0.1.0"
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: students
