students/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: students
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: students.minikube
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: students
                port:
                  number: 8080
